--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "firebase": "^10.12.5",
     "lucide-react": "^0.424.0",
+    "nuka-carousel": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
